Enhancement: Make AI model configurable via environment variable
Made the AI model selection configurable through environment variables,
allowing easy switching between different Claude models without code changes.

Changes made:
1. Added AI_MODEL to Settings class (backend/app/config.py)
   - Default value: "claude-sonnet-4-5" (auto-updating alias)
   - Can be overridden via environment variable

2. Updated all AI services to use settings.AI_MODEL:
   - ConversationAI (backend/app/services/ai_service.py:31)
   - GrammarAIService (backend/app/services/grammar_ai_service.py:24)
   - VocabularyAIService (backend/app/services/vocabulary_ai_service.py:24)

3. Added AI_MODEL to environment templates:
   - backend/.env.example (line 6)
   - backend/deploy/.env.production (line 14)

4. Bonus: Fixed accidental 'ok prog' text in .env.example (line 1)

Benefits:
- Easy model switching (Sonnet, Opus, Haiku) via environment variable
- No code changes needed to test different models
- Centralized model configuration
- Production-ready for different deployment environments

Usage:
  # In .env file
  AI_MODEL=claude-sonnet-4-5      # Latest Sonnet (auto-updates)
  AI_MODEL=claude-opus-4-5        # Latest Opus
  AI_MODEL=claude-haiku-4-5       # Latest Haiku
  AI_MODEL=claude-sonnet-4-5-20250929  # Specific snapshot

All services will now use the configured model from environment.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,9 @@
-ok prog# Database Configuration
+# Database Configuration
 DATABASE_URL=postgresql://username:password@localhost:5432/german_learning
 
 # AI Services
 ANTHROPIC_API_KEY=sk-ant-your-api-key-here
+AI_MODEL=claude-sonnet-4-5
 
 # Security
 SECRET_KEY=your-secret-key-here-generate-with-openssl-rand-hex-32
