--- a/backend/deploy/.env.production
+++ b/backend/deploy/.env.production
@@ -11,6 +11,7 @@ DATABASE_URL=postgresql://german_app_user:REPLACE_WITH_DB_PASSWORD@localhost/ger
 # AI SERVICES
 # =============================================================================
 ANTHROPIC_API_KEY=REPLACE_WITH_YOUR_ANTHROPIC_API_KEY
+AI_MODEL=claude-sonnet-4-5
 
 # =============================================================================
 # SECURITY
