Fix: Change systemd service Type from notify to simple
Changed Type=notify to Type=simple to fix service startup timeout.

Issue: uvicorn doesn't send systemd sd_notify signals, causing the service
to hang in 'activating' state and eventually timeout.

Solution: Type=simple tells systemd to consider the service started
immediately after the ExecStart process is launched, which is correct
for uvicorn.

Fixes timeout error:
  Job for german-learning.service failed because a timeout was exceeded.

Location: backend/deploy/german-learning.service:7

--- a/backend/deploy/german-learning.service
+++ b/backend/deploy/german-learning.service
@@ -4,7 +4,7 @@ After=network.target postgresql.service
 Requires=postgresql.service
 
 [Service]
-Type=notify
+Type=simple
 User=REPLACE_WITH_YOUR_USERNAME
 Group=REPLACE_WITH_YOUR_USERNAME
 WorkingDirectory=/opt/german-learning-app/backend
